# evolutionhttp

./: README.md  client.py  server.go  server_test.go
client/: LICENSE  README.md  client_test.py  pyproject.toml
client/src/evolutionhttp/: __init__.py  client.py  local_client.py
client/tests/: client_test.py  local_client_test.py
server/: go.mod  server.go  server_test.go
