[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evolutionhttp"
version = "0.0.17"
authors = [
  { name = "Daniel Myers", email = "danielsmyers@gmail.com" },
]
description = "An HTTP client for controlling a Bryant Evolution HVAC system"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/danielsmyers/evolutionhttp"
Issues = "https://github.com/danielsmyers/evolutionhttp/issues"
